2022-08-31T16:32:27Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2965500372
* notice: last 14d: unq all: 12 37
* notice: prev accum: outdated-unq outdated-all / unq all: 282 446 / 307 484
* notice: next accum: outdated-unq outdated-all / unq all: 283 447 / 307 484
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-08-17] / []

2022-08-31T02:43:40Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2960960520
* notice: last 14d: unq all: 13 38
* notice: prev accum: outdated-unq outdated-all / unq all: 282 446 / 306 483
* notice: next accum: outdated-unq outdated-all / unq all: 282 446 / 307 484
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-08-30]

2022-08-30T02:38:06Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2953161671
* notice: last 14d: unq all: 13 37
* notice: prev accum: outdated-unq outdated-all / unq all: 282 446 / 306 482
* notice: next accum: outdated-unq outdated-all / unq all: 282 446 / 306 483
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-08-29]

2022-08-29T08:29:00Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2947057872
* notice: last 14d: unq all: 13 36
* notice: prev accum: outdated-unq outdated-all / unq all: 282 446 / 305 481
* notice: next accum: outdated-unq outdated-all / unq all: 282 446 / 306 482
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-08-29]

2022-08-28T16:29:51Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2943744875