@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-31T16:32:27Z",
+  "timestamp" : "2022-09-01T02:24:20Z",
   "count_outdated" : 447,
   "uniques_outdated" : 283,
-  "count" : 484,
-  "uniques" : 307,
+  "count" : 486,
+  "uniques" : 309,
   "clones" : [
     {
       "timestamp": "2022-08-18T00:00:00Z",
@@ -81,6 +81,13 @@
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-31T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ]
     }
   ]
 }
