@@ -1,6 +1,6 @@
 {
-  "count": 37,
-  "uniques": 12,
+  "count": 39,
+  "uniques": 13,
   "clones": [
     {
       "timestamp": "2022-08-18T00:00:00Z",
@@ -56,6 +56,11 @@
       "timestamp": "2022-08-30T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2022-08-31T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
