@@ -1,3 +1,11 @@
+2022-09-01T02:24:20Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2968442872
+* notice: last 14d: unq all: 13 39
+* notice: prev accum: outdated-unq outdated-all / unq all: 283 447 / 307 484
+* notice: next accum: outdated-unq outdated-all / unq all: 283 447 / 309 486
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2022-08-31]
+
 2022-08-31T16:32:27Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2965500372
 * notice: last 14d: unq all: 12 37
